--- a/app/admin/view/index/index.html
+++ b/app/admin/view/index/index.html
@@ -20,7 +20,7 @@
             <i class="layui-icon input-icon">&#xe66f;</i>
         </div>
         <div class="layui-form-item">
-            <input type="password" name="password" placeholder="密码"  value="admin" class="layui-input">
+            <input type="password" name="password" placeholder="密码"  value="123456" class="layui-input">
             <i class="layui-icon input-icon">&#xe673;</i>
         </div>
         <div class="layui-form-item" >{:captcha_img()}</div>
