--- a/app/admin/view/problem/list.html
+++ b/app/admin/view/problem/list.html
@@ -1,9 +1,14 @@
 {extend name='public/base' /}
 {block name='style'}
 <style>
-    /*.th{*/
-    /*    text-align: center !important   ;*/
-    /*}*/
+   .answer{
+       overflow: hidden;
+       text-overflow:ellipsis;
+       white-space: nowrap;
+   }
+   .abswer_th{
+       max-width: 600px;
+   }
 </style>
 {/block}
 {block name='body'}
@@ -11,10 +16,9 @@
     <colgroup>
         <col width="80">
         <col width="200">
-        <col width="400">
-        <col>
         <col width="200">
-        <col width="200">
+        <col width="100">
+        <col width="150">
         <col width="150">
         <col width="200">
     </colgroup>
@@ -22,7 +26,7 @@
     <tr >
         <th class="th">ID</th>
         <th class="th">题目</th>
-        <th class="th">答案</th>
+        <th class="th abswer_th">答案</th>
         <th class="th">所属栏目</th>
         <th class="th">创建时间</th>
         <th class="th">更新时间</th>
@@ -34,7 +38,7 @@
     <tr class="id84">
         <td>{$obj->id}</td>
         <td>{$obj->problem}</td>
-        <td>{$obj->answer}</td>
+        <td class="answer">{$obj->answer}</td>
         <td>{$obj.topic.topic}</td>
         <td>{$obj->create_time}</td>
         <td>{$obj->update_time}</td>
