--- a/app/admin/view/index/index.html
+++ b/app/admin/view/index/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>管理员登陆 - QAdmin后台模板</title>
+    <title>管理员登陆 - 微信小程序后台</title>
     <link rel="stylesheet" href="../static/common/layui/css/layui.css">
     <link rel="stylesheet" href="../static/admin/css/login.css">
     <link rel="stylesheet" href="../static/common/layui/css/modules/layer/default/layer.css">
@@ -13,7 +13,7 @@
 
 <body id="login">
 <div class="login">
-    <h2>QAdmin后台模板</h2>
+    <h2>小程序后台v1</h2>
     <form class="layui-form"  target="_blank" >
         <div class="layui-form-item">
             <input type="username" name="username" placeholder="用户名" value="xiaowu" class="layui-input">
