--- a/app/admin/view/index/index.html
+++ b/app/admin/view/index/index.html
@@ -16,11 +16,11 @@
     <h2>小程序后台v1</h2>
     <form class="layui-form"  target="_blank" >
         <div class="layui-form-item">
-            <input type="username" name="username" placeholder="用户名" value="xiaowu" class="layui-input">
+            <input type="username" name="username" placeholder="用户名"  class="layui-input">
             <i class="layui-icon input-icon">&#xe66f;</i>
         </div>
         <div class="layui-form-item">
-            <input type="password" name="password" placeholder="密码"  value="123456" class="layui-input">
+            <input type="password" name="password" placeholder="密码"  class="layui-input">
             <i class="layui-icon input-icon">&#xe673;</i>
         </div>
         <div class="layui-form-item" >{:captcha_img()}</div>
