--- a/app/admin/view/public/base.html
+++ b/app/admin/view/public/base.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title> 某某网站后台</title>
+    <title> 小程序后台</title>
     <link rel="stylesheet" href="/static/common/layui/css/layui.css">
     <link rel="stylesheet" href="/static/admin/css/style.css">
     <script src="/static/common/layui/layui.js"></script>
