--- a/app/admin/view/problem/edit.html
+++ b/app/admin/view/problem/edit.html
@@ -7,11 +7,23 @@
 <form class="layui-form " >
     <input type="text" hidden value="{$user->id}" name="id">
     <div class="layui-form-item">
-        <label class="layui-form-label">问题</label>
-        <div class="layui-input-inline">
-            <input type="text" name="problem" placeholder="{$user->problem}" autocomplete="off" class="layui-input">
+        <label class="layui-form-label">题目</label>
+        <div class="layui-input-block" style="width:1000px;">
+            <textarea id="problem" name="problem" style="height: 300px" type="text/plain">
+                {$user->problem}
+            </textarea>
         </div>
     </div>
+
+    <div class="layui-form-item">
+        <label class="layui-form-label">选项</label>
+        <div class="layui-input-block" style="width:1000px;">
+            <textarea id="answer" name="answer" style="height: 300px" type="text/plain">
+                {$user->answer}
+            </textarea>
+        </div>
+    </div>
+
     <div class="layui-form-item">
         <label class="layui-form-label">分类</label>
         <div class="layui-input-inline" style="width: 200px">
@@ -27,10 +39,10 @@
         </div>
     </div>
     <div class="layui-form-item">
-        <label class="layui-form-label">内容</label>
+        <label class="layui-form-label">答案解析</label>
         <div class="layui-input-block" style="width:1000px;">
-            <script id="container" name="answer" style="height: 500px" type="text/plain">
-                {$user->answer}
+            <script id="container" name="analysis" style="height: 500px" type="text/plain">
+                {$user->analysis}
             </script>
         </div>
     </div>
@@ -44,7 +56,27 @@
 {/block}
 {block name='script'}
 <script>
-    var ue = UE.getEditor('container');
+    var answer = UE.getEditor('answer',{
+        autoHeight: false,
+        initialFrameHeight:150
+    })
+    var problem = UE.getEditor('problem',{
+        autoHeight: false,
+        initialFrameHeight:200
+    })
+    var ue = UE.getEditor('container',{
+        autoHeight: false,
+        initialFrameHeight:300
+    });
+     var arr='<?php echo $user->analysis?>';
+    ue.ready(function(){
+        //设置编辑器的内容
+        ue.setContent(`${arr}`);
+        //获取html内容，返回: <p>hello</p>
+        var html = ue.getContent();
+        //获取纯文本内容，返回: hello
+        var txt = ue.getContentTxt();
+    })
     setTimeout(function () {
         ue.setHeight(500)
     },500)
