--- a/app/admin/view/error/index.html
+++ b/app/admin/view/error/index.html
@@ -1,10 +1,57 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <div>你没有权限访问</div>
-</body>
-</html>
+{extend name='public/base' /}
+{block name='body'}
+<div class="box">
+    <div class="img">
+        <img src="/static/404.png" alt="">
+    </div>
+    <div class="notpage_right">
+        <span>404</span>
+        <p>您暂时没有权限访问哦</p>
+        <button class="goback">返回首页</button>
+    </div>
+</div>
+{/block}
+{block name="style"}
+<style>
+    .box{
+        width: 1000px;
+        height: 400px;
+        border: 1px solid #00a2d4;
+        display: flex;
+        margin: 40px auto;
+    }
+    .box .img img{
+        height: 400px;
+        flex: 1;
+    }
+    .box .notpage_right{
+        flex: 1;
+        font-family: Sans-Serif,serif;
+        height: 400px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    .box .notpage_right > span{
+        display: inline-block;
+        font-size: 70px;
+    }
+    .box .notpage_right > p{
+        font-size: 30px;
+        tab-index: 40px;
+    }
+    .box .notpage_right > button{
+        width: 200px;
+        height: 40px;
+    }
+</style>
+{/block}
+{block name='script'}
+<script>
+ $('.goback').click(function (){
+    location.href = '/think/admin/index'
+ })
+</script>
+{/block}
+
