--- a/app/admin/view/problem/add.html
+++ b/app/admin/view/problem/add.html
@@ -8,13 +8,13 @@
     <legend>添加试题</legend>
 </fieldset>
 <form class="layui-form " >
-
     <div class="layui-form-item">
-        <label class="layui-form-label">问题</label>
-        <div class="layui-input-inline">
-            <input type="text" name="problem" placeholder="" autocomplete="off" class="layui-input">
+        <label class="layui-form-label">题目</label>
+        <div class="layui-input-block" style="width:1000px;">
+            <textarea id="problem" name="problem" style="height: 500px" type="text/plain"></textarea>
         </div>
     </div>
+
     <div class="layui-form-item">
         <label class="layui-form-label">分类</label>
         <div class="layui-input-inline" style="width: 200px">
@@ -26,10 +26,17 @@
             </select>
         </div>
     </div>
+
     <div class="layui-form-item">
-        <label class="layui-form-label">答案</label>
+        <label class="layui-form-label">选项</label>
         <div class="layui-input-block" style="width:1000px;">
-            <textarea id="container" name="answer" style="height: 500px" type="text/plain"></textarea>
+            <textarea id="answer" name="answer" style="height: 500px" type="text/plain"></textarea>
+        </div>
+    </div>
+    <div class="layui-form-item">
+        <label class="layui-form-label">答案解析</label>
+        <div class="layui-input-block" style="width:1000px;">
+            <textarea id="container" name="analysis" style="height: 500px" type="text/plain"></textarea>
         </div>
     </div>
     <div class="layui-form-item">
@@ -42,11 +49,21 @@
 {/block}
 {block name='script'}
 <script>
+    var answer = UE.getEditor('answer',{
+        autoHeight: false,
+        initialFrameHeight:150
+    })
+    var problem = UE.getEditor('problem',{
+        autoHeight: false,
+        initialFrameHeight:200
+    })
     var ue = UE.getEditor('container',{
         allowDivTransToP: false,
         allHtmlEnabled: false,//提交到后台的数据是否包含整个html字符串
-        elementPathEnabled:false
+        elementPathEnabled:false,
+        initialFrameHeight:300
     });
+
     setTimeout(function () {
         ue.setHeight(500)
     },500)
